# QtAudio

./: RedoModule.bat  sync.profile
doc/Qt/: CreateDocuments.bat  Qt.pri  QtAudio.qhp
include/QtAudio/: QtAudio  headers.pri  qtaudio.h
src/: src.pro
src/QtAudio/: QtAudio.pro
src/QtAudio/CiosAudio/: Android.txt  CaAllocationGroup.cpp  CaAllocationLink.cpp  CaBuffer.cpp  CaConduit.cpp  CaConduitFunction.cpp  CaConverters.cpp  CaCpuLoad.cpp  CaDebug.cpp  CaDeviceInfo.cpp  CaDither.cpp  CaHostApi.cpp  CaHostApiInfo.cpp  CaLinearConduit.cpp  CaLoopBuffer.cpp  CaMediaCodec.cpp  CaRingBuffer.cpp  CaStream.cpp  CaStreamIO.cpp  CaStreamParameters.cpp  CiosAudio.cpp  CiosAudio.hpp  CiosAudio.pri  CiosAudioPrivate.hpp  FreeBSD.txt  Linux.txt  MacOSX.txt  README.txt  Solaris.txt  Windows.txt  iPhoneOS.txt
src/QtAudio/CiosAudio/Bindings/: Bindings.pri
src/QtAudio/CiosAudio/Bindings/ADA/: README.txt
src/QtAudio/CiosAudio/Bindings/C/: README.txt
src/QtAudio/CiosAudio/Bindings/CLIPS/: README.txt
src/QtAudio/CiosAudio/Bindings/Erlang/: README.txt
src/QtAudio/CiosAudio/Bindings/FORTH/: README.txt
src/QtAudio/CiosAudio/Bindings/FORTRAN/: README.txt
src/QtAudio/CiosAudio/Bindings/Go/: README.txt
src/QtAudio/CiosAudio/Bindings/Haskell/: README.txt
src/QtAudio/CiosAudio/Bindings/Java/: README.txt
src/QtAudio/CiosAudio/Bindings/LISP/: README.txt
src/QtAudio/CiosAudio/Bindings/Lua/: README.txt
src/QtAudio/CiosAudio/Bindings/MetaTrader/: CaAudio.sln  MetaTrader.pri  README.txt
src/QtAudio/CiosAudio/Bindings/MetaTrader/CaAudio/: CMakeLists.txt  CaAudio.cpp  CaAudio.def  CaAudio.hpp  CaAudio.vcxproj  CaAudio.vcxproj.filters  CaDLL.cpp
src/QtAudio/CiosAudio/Bindings/PERL/: PERL.pri  README.txt
src/QtAudio/CiosAudio/Bindings/Prolog/: README.txt
src/QtAudio/CiosAudio/Bindings/Python/: README.txt
src/QtAudio/CiosAudio/Bindings/Qt/: CaQtDebugger.cpp  CaQtUtilities.cpp  CaQtWrapper.hpp  CaQtWrapper.pri  Qt.pri
src/QtAudio/CiosAudio/Bindings/R/: README.txt
src/QtAudio/CiosAudio/Bindings/Ruby/: README.txt
src/QtAudio/CiosAudio/Bindings/Scheme/: README.txt
src/QtAudio/CiosAudio/Bindings/Scilab/: README.txt
src/QtAudio/CiosAudio/Compile/: Compile.pri  README.txt
src/QtAudio/CiosAudio/Compile/Android/: CMakeLists.txt
src/QtAudio/CiosAudio/Compile/Linux/: CMakeLists.txt  Ubuntu-FFmpeg.sh
src/QtAudio/CiosAudio/Compile/MacOSX/: BuildCiosAudio.sh  CMakeLists.txt
src/QtAudio/CiosAudio/Compile/Windows/: CMakeLists.txt  README.txt
src/QtAudio/CiosAudio/Compile/iPhoneOS/: iPhoneOS.pri
src/QtAudio/CiosAudio/Documents/: Documents.pri
src/QtAudio/CiosAudio/Documents/Architecture/: Architecture.pri  CiosAudioDebugger.tex
src/QtAudio/CiosAudio/Documents/Drivers/: CiosAudioDrivers.tex  Drivers.pri
src/QtAudio/CiosAudio/Documents/HTML/: HTML.pri  Translators.html  index.html
src/QtAudio/CiosAudio/Documents/HTML/CN/: Replacements.txt  TW2CN.pro  apps.html  contacts.html  documents.html  downloads.html  faq.html  hostapi.html  index.html  license.html  links.html  mail.html  status.html  style.css  volunteer.html
src/QtAudio/CiosAudio/Documents/HTML/CN/API/: AllocationGroup.html  AllocationLink.html  Allocator.html  BridgeConduit.html  BufferProcessor.html  CaChannelDescriptor.html  CaErrorCode.html  CaHostApiTypeId.html  CaHostBufferSizeMode.html  CaResampler.html  CaSampleFormat.html  CaStreamAllFlags.html  Conduit.html  ConduitFunction.html  Core.html  CpuLoad.html  Debugger.html  DeviceInfo.html  Dither.html  FFmpegEncodePacket.html  Functions.html  HostApi.html  HostApiInfo.html  LinearConduit.html  LoopBuffer.html  Macros.html  MediaCodec.html  Mutex.html  RingBuffer.html  Stream.html  StreamIO.html  StreamInfoHeader.html  StreamParameters.html  Thread.html  ThreadData.html  Timer.html  Typedefs.html  Variables.html  index.html
src/QtAudio/CiosAudio/Documents/HTML/CN/Architecture/: Architectures.html  DataFlows.html  FlowCharts.html  index.html
src/QtAudio/CiosAudio/Documents/HTML/EN/: EN.pri  apps.html  contacts.html  documents.html  downloads.html  faq.html  hostapi.html  index.html  license.html  links.html  mail.html  status.html  volunteer.html
src/QtAudio/CiosAudio/Documents/HTML/JP/: JP.pri  apps.html  contacts.html  documents.html  downloads.html  faq.html  hostapi.html  index.html  license.html  links.html  mail.html  status.html  volunteer.html
src/QtAudio/CiosAudio/Documents/HTML/RU/: apps.html  contacts.html  documents.html  downloads.html  faq.html  hostapi.html  index.html  license.html  links.html  mail.html  status.html  volunteer.html
src/QtAudio/CiosAudio/Documents/HTML/TW/: TW.pri  apps.html  contacts.html  documents.html  downloads.html  faq.html  hostapi.html  index.html  license.html  links.html  mail.html  status.html  volunteer.html
src/QtAudio/CiosAudio/Examples/Android/CaPlayer/: CaPlayer.pro  CaPlayerWindow.cpp  CaPlayerWindow.hpp  CaPlayerWindow.ui
src/QtAudio/CiosAudio/Examples/CaPlay/: CaPlay.cpp  CaPlay.rc
src/QtAudio/CiosAudio/Examples/CaPlay/Linux/x64/: CMakeLists.txt  CaPlay.pro  Debian.txt  Ubuntu.txt
src/QtAudio/CiosAudio/Examples/CaPlay/MacOSX/x64/: CMakeLists.txt  CaPlay.pro
src/QtAudio/CiosAudio/Examples/CaPlay/Windows/x64/: CMakeLists.txt  CaPlay.pro
src/QtAudio/CiosAudio/Examples/CaPlay/Windows/x86/: CMakeLists.txt  CaPlay.pro
src/QtAudio/CiosAudio/Examples/Qt/CaVideoPlayer/: CaVideoPlayer.cpp  CaVideoPlayer.hpp  CaVideoPlayer.pro  CaVideoPlayer.ui  main.cpp
src/QtAudio/CiosAudio/Examples/Qt/CaWaveFreqFFT/: CaWaveFreqFFT.cpp  CaWaveFreqFFT.hpp  CaWaveFreqFFT.pro  CaWaveFreqFFT.qrc  CaWaveFreqFFT.ui  CiosDevices.ui
src/QtAudio/CiosAudio/Utilities/: BridgeConduit.cpp  RunMedia.cpp  Utilities.pri
src/QtAudio/CiosAudio/Utilities/Android/: nMutex.cpp
src/QtAudio/CiosAudio/Utilities/Linux/: nMutex.cpp  nThreadData.cpp
src/QtAudio/CiosAudio/Utilities/MacOSX/: nThread.cpp
src/QtAudio/CiosAudio/Utilities/Solaris/: nThread.cpp  nThreadData.cpp
src/QtAudio/CiosAudio/Utilities/Windows/: Windows.pri  nMutex.cpp  nThread.cpp  nThreadData.cpp
(+237 files in other folders)
